Clone и isBlank